--- a/Selmi.html
+++ b/Selmi.html
@@ -195,28 +195,28 @@ Ad avviso dell’insigne Vignolese, infine, Dante condensava in sé le migliori 
 
 <h5><big><big><big><big><strong><center>IMMAGINI</center></strong></big></big></big></big></big></h5><br><br>
 <p><center><big><big>Dagherrotipo che ritrae Selmi, nel suo laboratorio reggiano, a 30 anni;<br> si tratta di uno dei primissimi dagherrotipi mai realizzati in Italia. Fonte: Fondo archivistico Selmi.</big></center></p>
-	<center><img src="img/celebri vignolesi/Selmi/dagherrotipo.jpg" width="480" height="750"></center><br><br><br>
+	<center><img src="img/celebri vignolesi/Selmi/dagherrotipo.jpg" width="480" height="750"></center><br><br>
 	<p><center><big>Dipinto a olio anonimo e senza data (probabilmente della seconda metà del 1859) raffigurante Selmi.<br>Oggi si trova a Modena, all’interno del Rettorato dell’Università di Modena e Reggio Emilia. Fonte: google.com</center></big></p>
-	<img src="img/celebri vignolesi/Selmi/ritratto.jpg" width="500" height="650"><br><br><br>
+	<img src="img/celebri vignolesi/Selmi/ritratto.jpg" width="500" height="650"><br><br>
 	<p><center><big>Selmi all’apparente età di circa 47/48 anni. Fonte: Fondo archivistico Selmi.</big></center></p>
-	<img src="img/celebri vignolesi/Selmi/Selmi quarantacinquenne.jpg" width="500" height="700"><br><br><br>
+	<img src="img/celebri vignolesi/Selmi/Selmi quarantacinquenne.jpg" width="500" height="700"><br><br>
 	<p><center><big>Ritratto di Selmi in età senile, incisione eseguita a partire da un disegno dell’artista laziale Dante Paolocci (1849-1926);<br> accompagna <i>Francesco Selmi</i>, necrologio anonimo uscito in «L’Illustrazione Italiana»,<br> 28 agosto 1881, t. II dell’annata, pp. 139-140, con l’immagine a p. 140. Fonte: google.com</big></center></p>
-	<center><img src="img/celebri vignolesi/Selmi/illustrazione.jpg" width="450" height="650"></center><br><br><br>
+	<center><img src="img/celebri vignolesi/Selmi/illustrazione.jpg" width="450" height="650"></center><br><br>
 <p><center><big><i>Incipit</i> di <i>Canto a Vignola</i>; questo poemetto uscì, nell’aprile del 1840,<br> all’interno del «Giornale letterario scientifico modenese», t. II, n. 7, pp. 77-80.<br> Fonte: google.com</big></center></p>
-	<center><img src="img/celebri vignolesi/Selmi/Canto a Vignola.jpg" width="450" height="630"></center><br><br><br>
+	<center><img src="img/celebri vignolesi/Selmi/Canto a Vignola.jpg" width="450" height="630"></center><br><br>
 	<p><center><big>Prima di copertina dell’esemplare di <i>Il Favoleggiatore ossia raccolta di favole in lingua volgare<br> scelte, emendate e purgate non che opportunamente annotate ad usum serenissimi saeculi XIX dal M. di S.</i><br> (Torino, Tip. di G.B. Paravia e Comp., 1857) conservato nella Biblioteca Comunale “Francesco Selmi” di Vignola.<br> <i>M. di S.</i> (che sta probabilmente per <i>Maestruccio di Scuola</i>) è lo pseudonimo di Selmi.</big></center></p>
-	<center><img src="img/celebri vignolesi/Selmi/Favoleggiatore.jpg" width="460" height="600"></center><br><br><br>
+	<center><img src="img/celebri vignolesi/Selmi/Favoleggiatore.jpg" width="460" height="600"></center><br><br>
 <p class="index-p4">Prima di copertina dell’esemplare di <i>Il Convito</i> di Selmi recante la dedica autografa di un figlio dell’Autore (probabilmente il secondogenito Pier Alberto), datata da Venezia il 26 agosto 1883, al conte Luigi Sernagiotto. Collezione privata.<br>
 	Non priva d’interesse è la figura del dedicatario. Luigi Sernagiotto di Casavecchia nacque a Montebelluna, vicino a Treviso, il 27 novembre 1822 e morì a Venezia il 23 marzo 1904. Proveniente da una famiglia di commercianti, egli si dedicò a lungo agli ozi letterari, rivolgendo il proprio acuto ingegno a diversi campi e licenziando per la stampa parecchi libri e articoli. Uomo di profonda pietà, mise sovente al servizio della religione cattolica la sua notevole cultura e le sue non comuni conoscenze linguistiche, divenendo – oltretutto – uno dei maggiori studiosi ed esperti del pensiero e degli scritti di Antonio Rosmini (1797-1855) così come della loro diffusione e fortuna in Europa e nell’America settentrionale; di quell’illustre e – all’epoca – assai contrastato teologo e filosofo roveretano, Sernagiotto fu altresì uno dei principali apologisti ottocenteschi. Il nobiluomo veneto godette di una certa fama anche come critico d’arte.</p>
-	<img src="img/celebri vignolesi/Selmi/ricordi.jpg" width="450" height="650"><br><br><br>
+	<img src="img/celebri vignolesi/Selmi/ricordi.jpg" width="450" height="650"><br><br>
 	<p><center><big>Lettera di Selmi, datata da Bologna il 28 settembre 1877, al vignolese Giovanni Tosi Bellucci (1854-1932).<br> Inedita, collezione privata.</big></center></p>
 	<img src="img/celebri vignolesi/Selmi/lettera.jpg" width="450" height="650"><br><br>
 	<p><center><big><i>Sulle ptomaine od alcaloidi cadaverici e loro importanza in tossicologia. Osservazioni del Prof. Francesco Selmi.<br>Aggiuntavi una perizia per la ricerca della morfina</i>, In Bologna, Presso Nicola Zanichelli successore alli Marsigli e Rocchi, 1878.<br> Questo esemplare riporta una dedica dell’Autore a Giovanni Tosi Bellucci. Collezione privata.</big></center></p>
-	<img src="img/celebri vignolesi/Selmi/libro Selmi.jpg" width="450" height="650"><br><br><br>
+	<img src="img/celebri vignolesi/Selmi/libro Selmi.jpg" width="450" height="650"><br><br>
 	<p><center><big>Immagine recente della cappella funebre di Selmi, inaugurata nel 1901 all’interno del cimitero di Vignola.<br> Sotto il busto in gesso, opera dello scultore maranese Domenico Bernabei (1854-1936),<br> figura la lapide commemorativa dettata da Luigi Zini (1821-1894), amico dell’estinto.</big></center></p>
 	<center><img src="img/celebri vignolesi/Selmi/Busto e lapide.jpg" width="390" height="680"></center><br><br>
 	<p><center><big>Lapide commemorativa della cappella funebre di Selmi.</big></center></p>
-		<center><img src="img/celebri vignolesi/Selmi/lapide.jpg" width="450" height="700"></center><br><br><br>
+		<center><img src="img/celebri vignolesi/Selmi/lapide.jpg" width="450" height="700"></center><br><br>
 			<p><strong><a href="Celebri Vignolesi.html">Indice dei nomi</a></strong></p><br><br>
 </section>
 <footer><i class="far fa-copyright">&nbsp;</i> Copyright 2021, 2022 - CELEBRI VIGNOLESI<br>
