--- a/Neri2.html
+++ b/Neri2.html
@@ -44,6 +44,54 @@ A Nèttore Neri sono attualmente intitolate la Biblioteca Comunale di Barbiano e
 
 <h5><big><big><big><big><strong><center>IMMAGINI</center></strong></big></big></big></big></big></h5><br><br>
 
+<p><big><big><center>Neri fotografato nella prima maturità; il berrettino che egli indossa si chiama, in dialetto romagnolo, «galòza» (o «calòta»).<br> L’immagine venne inserita, qualche tempo dopo essere stata scattata, in <i>Blightrìgh e smaréj</i>, raccolta sulla quale vedi poco oltre.</center></big></big></p>
+<center><img src="img/celebri vignolesi/Neri2/nettore.jpg" width="500" height="665"></center><br><br>
+
+<p><big><big><center>Neri al suo arrivo a Vignola come pretore, accolto dalle massime autorità del paese (1924).<br> Il nostro personaggio è al centro e tiene per mano il figlioletto <strong>Attilio</strong>.<br> L’autore dello scatto fu il rinomato fotografo modenese Umberto Orlandini (1879-1931).</center></big></big></p>
+<center><img src="img/celebri vignolesi/Neri2/autorità.jpg" width="950" height="665"></center><br><br>
+
+<p><big><big><center>Ritratto fotografico di Neri proveniente da <i>Arsoj. Biòjch rumagnoli cun dò parol d’Spaldo</i><br> [Rimasuglio. Bioccoli romagnoli con due parole di Spaldo], Vignòla, Stamparèja A. Monti d’E. Fabbri, 1939.<br> «Spaldo» è Aldo Spallicci.</center></big></big></p>
+<center><img src="img/celebri vignolesi/Neri2/ritratto.jpg" width="400" height="665"></center><br><br>
+
+<p><big><big><center>Prima di copertina di <i>Blightrìgh e smaréj (Canted)</i> [Cose di poco conto e sciocchezze],<br> Lugh, Stampareja di Ferretti, 1932. <br> C’è una presentazione di Aldo Spallicci; gli autori delle illustrazioni sono l’imolese Tommaso Della Volpe (1883-1964)<br> e il modenese Ferdinando Cavicchioli (1863-1941). Si tratta del primo libro pubblicato da Neri ed è l’unico che sia stato posto in vendita.</center></big></big></p>
+<center><img src="img/celebri vignolesi/Neri2/sciocchezze.jpg" width="480" height="665"></center><br><br>
+
+<p><big><big><center>Prima di copertina di <i>Blén e schlén (Canted)</i> [Frammenti e schegge di legno (Cantate)],<br> Lugh, Stamparèja di Ferretti, 1934 (una edizione) e 1935 (due edizioni).<br> È presente un proemio di A.B. [Antonio Baldini?]. Libro decorato dal pittore cotignolese Luigi Varoli.</center></big></big></p>
+<center><img src="img/celebri vignolesi/Neri2/frammenti.jpg" width="450" height="665"></center><br><br>
+
+<p><big><big><center>Prima di copertina di <i>Ruscàja. Cun introduzion d’Antonio Baldini</i> [Spazzatura. Con introduzione di Antonio Baldini],<br> Vignola, Stamparèja A. Monti d’E. Fabbri, 1937.</center></big></big></p>
+<center><img src="img/celebri vignolesi/Neri2/ruscaia.jpg" width="450" height="665"></center><br><br>
+
+<p><big><big><center>Cappella funeraria della famiglia Nèttore Neri.</center></big></big></p>
+<center><img src="img/celebri vignolesi/Neri1/cappella.jpg" width="450" height="600"><br><br>
+
+<p><big><big><center>Lastra tombale del nostro personaggio nella cappella di famiglia.<br> Il distico proviene dalla raccolta <i>Arsoj</i> e significa, in italiano:<br> «Io sono come quel grillo che sotto le stelle / canta di notte quando cantare è bello».</center></big></big></p>
+<center><img src="img/celebri vignolesi/Neri2/lastra.jpg" width="450" height="300"><br><br><br><br><br>
+
+<h5><big><big><big><big><strong><center>BIBLIOGRAFIA MINIMA DI RIFERIMENTO</center></strong></big></big></big></big></big></h5><br><br>
+
+
+<p><big><strong>BELLOSI, Giuseppe</strong>: <strong><i>Le</i> Nugae <i>dialettali di Nettore Neri</i></strong>, «Studi Romagnoli», vol. XXVIII (1977) [ma: 1980], pp. 311-319.</big></p> 
+
+ 
+
+<p><big><strong>NERI, Nettore</strong>: <strong><i>Poesie in dialetto romagnolo 1932-1965</i></strong>, a cura di Giuseppe Bellosi, prefazione di Renzo Cremante, con una lettera inedita di Pier Paolo Pasolini, Ravenna, Longo, 1983.</big></p>
+
+ 
+
+<p><big><strong>TRENTI, Maria Giovanna</strong>: <strong><i>Un poeta romagnolo a Vignola: Nettore Neri</i></strong>, «Gente di Panaro. Rassegna di storia, “storie” e cultura locale – Valle del Panaro», n. 22 (2020), pp. 137-144.</big></p> 
+
+ 
+
+<p><big><strong>VERONESI, Matteo</strong>: <strong><i>Voci e silenzi della natura in Nettore Neri</i></strong>, <http://farapoesia.blogspot.com/2013/06/voci-e-silenzi-della-natura-in-nettore.html> (ultimo accesso: 31 agosto 2022), 2013, senza paginazione; poi, con lo stesso titolo, in Elisabetta Brizio - Matteo Veronesi, <i>Satura lanx. Saggi, interventi, recensioni, colloqui</i>, Imola (BO), Nuova Provincia, 2014, pp. 219-229.</big></p>
+
+ 
+
+<p><big>Si segnala che tre poesie del nostro personaggio sono state antologizzate, con traduzione (a piè di pagina) in italiano compiuta da Gianni Quondamatteo, in <strong><i>Poesia dialettale dal Rinascimento a oggi</i></strong>, 2 voll., introduzione, scelta dei testi, note e commenti di Giacinto Spagnoletti e Cesare Vivaldi, Milano, Garzanti, 1991, vol. I, pp. 611-613; la piccola sezione, dal titolo <i>Nettore Neri</i>, si apre a p. 611 con una breve (e non del tutto impeccabile) scheda su quest’autore.</big></p><br><br><br>
+
+
+
+
 <p><big><strong><a href="Celebri Vignolesi.html">Indice dei nomi</a></big></strong></p><br>
 </section>
 <footer><i class="far fa-copyright">&nbsp;</i> Copyright 2021, 2022 - CELEBRI VIGNOLESI<br>
