--- a/giugno.html
+++ b/giugno.html
@@ -77,6 +77,16 @@ Nell’immagine sottostante, l’<i>Autoritratto</i> di Giuseppe Maria Soli (il 
 <img src="img/celebri vignolesi/Soli Giuseppe Maria/Autoritratto.jpg" width="500" height="670"><br><br><br>
 <p><strong><big><center>Vuoi saperne di più su Giuseppe Maria Soli?<br>Allora, visita il suo <a href="Soli Giuseppe Maria.html">profilo personale</a> nella sezione <a href="Celebri Vignolesi.html">Celebri Vignolesi</a>!</big></center></strong></p><br><br><br>
 
+<p class="index-p3"><strong>24 giugno 1970</strong> (in alcune sedi, sbagliando, si posticipa la data di un giorno): morì a Vignola <strong>NÈTTORE NERI</strong>, magistrato e poeta. Le sue spoglie riposano presso il cimitero cittadino, nella cappella di famiglia.<br><br> 
+
+Nato a Barbiano di Cotignola (nel Ravennate) il 27 gennaio 1883, Nèttore Neri diventò magistrato nel 1920 e fu pretore di Vignola per quasi trent’anni (1924-1953). Appassionato delle belle lettere e amico di poeti, artisti, musicisti e studiosi, egli pubblicò alcune pregevoli raccolte di versi in dialetto romagnolo che godono tuttora di una certa considerazione tra gli specialisti di letteratura vernacolare in Italia; i suoi componimenti destarono e destano tuttora il forte interesse di poeti e critici, da Aldo Spallicci (1886-1973) ad Antonio Baldini (1889-1962), da Giacinto Spagnoletti (1920-2003) a Pier Paolo Pasolini (1922-1975), da Roberto Roversi (1923-2012) a Cesare Vivaldi (1925-1999) e Giuseppe Bellosi (n. 1954).<br>
+Il figlio <strong>Attilio Neri</strong> (1921-2009) ottenne importanti riconoscimenti nel mondo intellettuale vignolese e non solo.<br><br>  
+Nelle immagini sottostanti, cappella funeraria della famiglia Nèttore Neri e lastra tombale del nostro personaggio (il distico proviene dalla raccolta <i>Arsoj</i> e significa, in italiano: «Io sono come quel grillo che sotto le stelle / canta di notte quando cantare è bello»).</center></p>
+<center><img src="img/celebri vignolesi/Neri1/cappella.jpg" width="450" height="600"><br><br>
+<img src="img/celebri vignolesi/Neri2/lastra.jpg" width="450" height="300"></center><br><br>
+
+<p class="index-p3"><big><strong><center>Vuoi saperne di più su Nèttore Neri?<br>Allora, visita il suo <a href="Neri2.html">profilo personale</a> nella sezione <a href="Celebri Vignolesi.html">Celebri Vignolesi</a>!</big></center></strong></p><br><br><br>
+
 <p class="index-p3"><strong>25 giugno 1959</strong>: morì a Vignola <strong>UGO ROLI</strong>, educatore, scrittore, poeta, studioso di storia (anche locale), avvocato, funzionario pubblico ed enigmografo.<br><br>
 Nato a Vignola il 23 febbraio 1887, Ugo Roli svolse dapprima la professione di maestro elementare e poi quella di avvocato.<br>
 Più volte decorato durante la Prima Guerra Mondiale, si distinse a livello nazionale come enigmografo (con lo pseudonimo di «Fiordaliso») e come autore di libri scolastici per le Scuole Elementari.<br>  
