--- a/gennaio.html
+++ b/gennaio.html
@@ -85,6 +85,18 @@ Nell’immagine qui sotto, tomba monumentale di Lodovico Antonio Muratori in San
 <p><big><strong>25 gennaio 1401</strong> (calendario giuliano): grazie alla donazione di Niccolò III d’Este (1383-1441), marchese di Ferrara, diventò <strong>signore di Vignola</strong> il nobiluomo ferrarese <strong>UGUCCIONE I CONTRARI</strong> (1379?-1448), conosciuto anche con il nome di <strong> Uguccione <i>il Magnifico</i></strong>.<br><br>  
 Con questa donazione, ebbe di fatto inizio la giurisdizione feudale dei Contrari sul castello di Vignola e sulle terre del suo contado, destinata a durare fino al 1575. L’investitura vera e propria fu tuttavia concessa ufficialmente solo il 9 settembre 1453 (calendario giuliano) da Borso d’Este (1413-1471), duca di Ferrara, Modena e Reggio, agli eredi legittimi di Uguccione I (in quanto figli della sua seconda moglie, Camilla Pio), ossia Nicolò (<i>ante</i> 1442 - 1477) e Ambrogio (1443/1447-1493); tramite tale atto, Vignola (insieme con i territori in quel periodo a lei sottoposti, vale a dire il castello di Montebonello, la podesteria di Monfestino e quella di Savignano, comprendente la stessa Savignano, Monteorsello, Monteombraro e Montecorone) venne resa a tutti gli effetti contea.<br><br>Nell’immagine sottostante, stemma sullo scudo da torneo, l’elmo e il cimiero di Uguccione I Contrari, affrescati nelle vele del soffitto della Sala delle Colombe della rocca di Vignola. Fonte: google.com</big></p><br><br><br>
 <img src="img/celebri vignolesi/Uguccione I Contrari/stemma.jpg" width="600" height="600"><br><br><br>
+  
+  
+<p><big><strong>27 gennaio 1883</strong>: nacque a Barbiano di Cotignola (nel Ravennate) <strong>NÈTTORE NERI</strong>, magistrato e poeta.<br><br>
+
+Entrato in Magistratura nel 1920, Nèttore Neri fu pretore di Vignola dal 1924 al 1953. Uomo di profonda cultura, egli si fece apprezzare nel mondo intellettuale italiano come valente poeta in dialetto romagnolo e fu in contatto con alcuni importanti letterati, artisti, musicisti e studiosi della Penisola. I suoi versi attirarono e attirano tuttora l’attenzione anche di studiosi e di poeti del calibro di Aldo Spallicci (1886-1973), Antonio Baldini (1889-1962), Giacinto Spagnoletti (1920-2003), Pier Paolo Pasolini (1922-1975), Roberto Roversi (1923-2012), Cesare Vivaldi (1925-1999) e Giuseppe Bellosi (n. 1954). <br>
+Neri morì a Vignola il 24 giugno 1970 (in alcune sedi, viene erroneamente indicato il giorno successivo). Le ceneri riposano nel locale camposanto, all’interno della cappella di famiglia.<br>
+Era il padre di <strong>Attilio Neri</strong> (1921-2009), figura di primissimo piano nella società vignolese della seconda metà del Novecento e del principio degli anni Duemila.<br><br>
+
+Nell’immagine sottostante, ritratto fotografico di Neri proveniente da <i>Arsoj. Biòjch rumagnoli cun dò parol d’Spaldo</i> [Rimasuglio. Bioccoli romagnoli con due parole di Spaldo], Vignòla, Stamparèja A. Monti d’E. Fabbri, 1939. «Spaldo» è Aldo Spallicci.<br>
+<center><img src="img/celebri vignolesi/Neri2/ritratto.jpg" width="400" height="665"></center></big></p><br><br> 
+  
+  
 <p><big><strong><a href="Anniversari.html">Indice dei mesi</a></big></strong></center></p><br><br>
 </section>
 <footer><i class="far fa-copyright">&nbsp;</i> Copyright 2021, 2022 - CELEBRI VIGNOLESI<br>
