--- a/gennaio.html
+++ b/gennaio.html
@@ -96,6 +96,7 @@ Era il padre di <strong>Attilio Neri</strong> (1921-2009), figura di primissimo 
 Nell’immagine sottostante, ritratto fotografico di Neri proveniente da <i>Arsoj. Biòjch rumagnoli cun dò parol d’Spaldo</i> [Rimasuglio. Bioccoli romagnoli con due parole di Spaldo], Vignòla, Stamparèja A. Monti d’E. Fabbri, 1939. «Spaldo» è Aldo Spallicci.<br>
 <center><img src="img/celebri vignolesi/Neri2/ritratto.jpg" width="400" height="665"></center></big></p><br><br> 
   
+<p><big><strong><center>Vuoi saperne di più su Nèttore Neri?<br> Allora, visita il suo <a href="Neri2.html">profilo personale</a> nella sezione <a href="Celebri Vignolesi.html">Celebri Vignolesi</a>!</big></center></strong></p><br><br><br>  
   
 <p><big><strong><a href="Anniversari.html">Indice dei mesi</a></big></strong></center></p><br><br>
 </section>
