--- a/Bernardoni.html
+++ b/Bernardoni.html
@@ -68,21 +68,25 @@
 <p><big>Lettera di Bernardoni a Muratori datata da Vienna il 5 luglio 1710, in L.A. Muratori, <i>Carteggi con Bentivoglio … Bertacchini</i>, cit., p. 550.</big></p><br><br>  
 
  
-
- 
-
-	<h5><big><big><big><big><strong><center>FILMATO</center></strong></big></big></big></big></big></h5><br><br>
-	<p><big>Proponiamo qui un breve filmato durante il quale vengono sfogliate le pagine iniziali di <i><strong>Rime varie, consagrate alla S.C.R. Maestà di Giuseppe I. August.mo Imperator de’ Romani, da Pietro Antonio Bernardoni Poeta Cesareo, et Accademico Gelato, Arcade, Scomposto, Animoso, et Acceso</i>, Vienna d’Austria, Appresso Gio. Van Ghelen, 1705</strong>. L’esemplare utilizzato appartiene a una collezione privata vignolese.</big></p>
-<video width="500" height="350" controls>
-    <source src="video/RIME VARIE.mp4" type="video/mp4">
-</video><br><br><br><br><br><br>
-<h5><big><big><big><big><strong><center>IMMAGINI</center></strong></big></big></big></big></big></h5><br><br>
+	<h5><big><big><big><big><strong><center>IMMAGINI</center></strong></big></big></big></big></big></h5><br><br>
 <p><center><big><big>Giuseppe Guzzi (notizie tra il 1834 e il 1842), ritratto postumo di Pietro Antonio Bernardoni, incisione,<br> a partire da un disegno fatto dal vivo. Fonte: <i>Iconografia dei celebri vignolesi. Opera edita per cura di Francesco<br> Selmi</i>, Modena,A spese di Giuseppe Lupi librajo, 1839. Il piccolo libro in oggetto è una pubblicazione periodica di natura<br> collettiva costituita di sette dispense singole (le quali presentano in alcuni casi note tipografiche parzialmente diverse da quelle<br> che si trovano nel volumetto rilegato, ad esempio «Presso il libraio Giuseppe Luppi»; quest’ultimo, peraltro, risulta il nome corretto<br> del libraio modenese), così intitolate: <i>Jacopo Cantelli</i>, <i>Lodovico Antonio Muratori</i>, <i>Jacopo Barozzi da Vignola</i>,<br> <i>Pietro Antonio Bernardoni</i>, <i>Agostino Paradisi</i>, <i>Giuseppe Soli</i>, <i>Veronica Cantelli Tagliazucchi</i>. <br> L’incisione di Guzzi apre la dispensa su Bernardoni, il cui testo scritto è firmato in calce «P……».</big></big></center></p>
+
 <img src="img/celebri vignolesi/Bernardoni/Incisione.jpg" width="450" height="770"><br><br><br>
+
+<p><center><big><big>Frontespizio di <i>Rime varie, consagrate alla S.C.R. Maestà di Giuseppe I. August.mo Imperator de’ Romani, ​<br> da Pietro Antonio Bernardoni Poeta Cesareo, et Accademico Gelato, Arcade, Scomposto, Animoso, et Acceso,</i> ​<br> Vienna d’Austria, Appresso Gio. Van Ghelen, 1705. Fonte: collezione privata.</big></big></center></p>
+<img src="img/celebri vignolesi/Bernardoni/rimevarie.jpg" width="470" height="590"><br><br><br>
+
 <p><center><big><big>Casa natale di Bernardoni lungo la via che attualmente reca il suo nome.</big></center></p>
 <img src="img/celebri vignolesi/Bernardoni/casa.jpg" width="750" height="550"><br><br><br>
 <center><big>Lapide collocata sopra la porta di ingresso della casa natale di Bernardoni.<br> Il 1° luglio 1672, in realtà, è il giorno del battesimo di questo importante personaggio.</big></center><br>
-<img src="img/celebri vignolesi/Bernardoni/lapide.jpg" width="750" height="550"></p><br><br><br>
+<img src="img/celebri vignolesi/Bernardoni/lapide.jpg" width="550" height="380"></p><br><br><br>
+
+<h5><big><big><big><big><big><strong><center>FILMATO</center></strong></big></big></big></big></big></h5><br><br>
+	<p><big>Proponiamo qui un breve filmato durante il quale vengono sfogliate le pagine iniziali di <i><strong>Rime varie, consagrate alla S.C.R. Maestà di Giuseppe I. August.mo Imperator de’ Romani, da Pietro Antonio Bernardoni Poeta Cesareo, et Accademico Gelato, Arcade, Scomposto, Animoso, et Acceso</i>, Vienna d’Austria, Appresso Gio. Van Ghelen, 1705</strong>. L’esemplare utilizzato appartiene a una collezione privata vignolese.</big></p>
+<video width="500" height="350" controls>
+    <source src="video/VIDEO BERNARDONI.mp4" type="video/mp4">
+</video><br><br><br><br><br><br>
+
 <p><strong><a href="Celebri Vignolesi.html">Indice dei nomi</a></big></strong></p><br>
 </section>
 <footer><i class="far fa-copyright">&nbsp;</i> Copyright 2021, 2022 - CELEBRI VIGNOLESI<br>
