--- a/Bernardoni.html
+++ b/Bernardoni.html
@@ -81,7 +81,7 @@
 <center><big>Lapide collocata sopra la porta di ingresso della casa natale di Bernardoni.<br> Il 1° luglio 1672, in realtà, è il giorno del battesimo di questo importante personaggio.</big></center><br>
 <img src="img/celebri vignolesi/Bernardoni/lapide.jpg" width="550" height="380"></p><br><br><br>
 
-<h5><big><big><big><strong><center>FILMATO</center></strong></big></big></big></big></h5><br><br>
+<h5><big><big><big><strong><center>FILMATO</center></strong></big></big></big></h5><br><br>
 	<p>Proponiamo qui un breve filmato durante il quale vengono sfogliate le pagine iniziali di <i><strong>Rime varie, consagrate alla S.C.R. Maestà di Giuseppe I. August.mo Imperator de’ Romani, da Pietro Antonio Bernardoni Poeta Cesareo, et Accademico Gelato, Arcade, Scomposto, Animoso, et Acceso</i>, Vienna d’Austria, Appresso Gio. Van Ghelen, 1705</strong>. L’esemplare utilizzato appartiene a una collezione privata vignolese.</p>
 <video width="500" height="350" controls>
     <source src="video/VIDEO BERNARDONI.mp4" type="video/mp4">
