--- a/Bernardoni.html
+++ b/Bernardoni.html
@@ -75,7 +75,13 @@ L’incisione di Guzzi apre la dispensa su Bernardoni, il cui testo scritto è f
 <img src="img/celebri vignolesi/Bernardoni/Incisione.jpg" width="450" height="770"><br><br><br>
 
 <p><center><big><big>Frontespizio di <i>Rime varie, consagrate alla S.C.R. Maestà di Giuseppe I. August.mo Imperator de’ Romani, ​<br> da Pietro Antonio Bernardoni Poeta Cesareo, et Accademico Gelato, Arcade, Scomposto, Animoso, et Acceso,</i> ​<br> Vienna d’Austria, Appresso Gio. Van Ghelen, 1705. Fonte: collezione privata.</big></big></center></p>
-<img src="img/celebri vignolesi/Bernardoni/rimevarie.jpg" width="470" height="590"><br><br><br>
+<img src="img/celebri vignolesi/Bernardoni/rimevarie.jpg" width="440" height="590"><br><br><br>
+
+<p><center><big><big>Frontespizio del primo dei due volumi della raccolta <i>Poemi drammatici</i>:<br> <i>Poemi drammatici di Pietro Antonio Bernardoni Poeta Cesareo, Et Accademico Arcade, Gelato, Scomposto, Animoso, & Acceso.<br> Parte prima consagrata All’Altezza Serenissima del Signor Principe di Toscana</i>,<br> In Bologna, Per Costantino Pisarri, sotto le Scuole all’Insegna di S. Michele, 1706. Fonte: google.com</big></big></center></p>
+<img src="img/celebri vignolesi/Bernardoni/poemidrammatici.jpg" width="440" height="590"><br><br><br>
+
+<p><center><big><big>Frontespizio del secondo dei due volumi della raccolta <i>Poemi drammatici</i>:<br> <i>Poemi drammatici di Pietro Antonio Bernardoni Poeta Cesareo, Et Accademico Arcade, Gelato, Scomposto, Animoso, & Acceso.<br> Parte seconda consagrata All’Altezza Serenissima di Rinaldo I. d'Este Duca di Modona Reggio &c.</i>,<br> In Bologna, Per Costantino Pisarri, sotto le Scuole all’Insegna di S. Michele, 1707. Fonte: google.com</big></big></center></p>
+<img src="img/celebri vignolesi/Bernardoni/secondaparte.jpg" width="400" height="590"><br><br><br>
 
 <p><center><big><big>Casa natale di Bernardoni lungo la via che attualmente reca il suo nome.</big></center></p>
 <img src="img/celebri vignolesi/Bernardoni/casa.jpg" width="750" height="550"><br><br><br>
