--- a/Soli3.html
+++ b/Soli3.html
@@ -45,9 +45,9 @@ Lasciò inediti numerosi lavori: ne sono conservati i manoscritti presso la Bibl
 
 Soli Muratori si spense a Modena il 29 settembre 1769. In ossequio alle sue volontà, la salma venne inumata in Santa Maria della Pomposa. Le spoglie andarono poi disperse e oggi non conosciamo più la posizione della sepoltura.</big></p><br><br><br>
 <h5><big><big><big><big><strong><center>IMMAGINI</center></strong></big></big></big></big></big></h5><br><br>
-<center><big><big>Il primo dei tre tomi delle <i>Dissertazioni sopra le antichità italiane</i><br> (In Milano [<i>recte</i>: Venezia], A spese di Giambatista Pasquali, 1751) di Muratori, a cura del nipote.</big></big></center><br>
+<center><big><big>Il primo dei tre tomi delle <i>Dissertazioni sopra le antichità italiane</i><br> (In Milano [<i>recte</i>: Venezia], A spese di Giambatista Pasquali, 1751) di Muratori, a cura del nipote. Fonte: google.com</big></big></center><br>
 <center><img src="img/celebri vignolesi/Soli Muratori Giovanni Francesco/Dissertazione.jpg" width="450" height="650"></center><br><br><br>
-<center><big><big>Frontespizio della <i>Vita del Proposto Lodovico Antonio Muratori</i>, opera pubblicata da Soli Muratori nel 1756.</big></big></center><br>
+<center><big><big>Frontespizio della <i>Vita del Proposto Lodovico Antonio Muratori</i>, opera pubblicata da Soli Muratori nel 1756. Fonte: collezione privata.</big></big></center><br>
 <center><img src="img/celebri vignolesi/Soli Muratori Giovanni Francesco/vita del proposto.jpg" width="450" height="650"></center><br><br><br>
 <center><big><big>Facciata di Santa Maria della Pomposa.</big></big></center><br>
 <center><img src="img/celebri vignolesi/Soli Muratori Giovanni Francesco/Facciata MODIFICATA.jpg" width="550" height="650"></center><br><br><br>
