--- a/Soli3.html
+++ b/Soli3.html
@@ -28,7 +28,7 @@
 </header>
 <section>
 	<p><big><strong><a href="Celebri Vignolesi.html">Indice dei nomi</a></big></strong></p><br><br>
-<h3><center><big><big>GIAN FRANCESCO SOLI MURATORI</big></big><br><br>
+<h3><center><big><big>GIOVANNI FRANCESCO SOLI MURATORI</big></big><br><br>
 	<big>(1701-1769)</big></center></h3><br><br><br>
 	<h4><big><big><big><big><strong><center>PROFILO BIOGRAFICO</center></strong></big></big></big></big></h4><br><br>
 	<p><big><strong>GIOVANNI FRANCESCO</strong> (detto <strong>Gianfrancesco</strong> o <strong>Gian-Francesco</strong>) <strong>SOLI</strong> (poi, <strong>SOLI MURATORI</strong>), sacerdote, storico, erudito, biografo, bibliotecario e archivista, nacque a Vignola il 10 settembre 1701.<br>  
