--- a/Celebri Vignolesi.html
+++ b/Celebri Vignolesi.html
@@ -69,7 +69,7 @@
 <tr>
 <td><big><big><strong><a href="Soli1.html">Giuseppe Maria Soli</a></strong></td>
 <td><big><big><strong><a href="Soli2.html">Ivo Soli</a></strong></td>
-<td><big><big><strong><a href="Soli3.html">Gian Francesco Soli Muratori</a></strong></td></tr>
+<td><big><big><strong><a href="Soli3.html">Giovanni Francesco Soli Muratori</a></strong></td></tr>
 <tr>
 <td><big><big><strong><a href="Tassoni.html">Giulio Tassoni</a></strong></td>
 <td><big><big><strong><a href="Tosi.html">Luca Antonio Tosi</a></strong></td>
