--- a/Santi.html
+++ b/Santi.html
@@ -43,7 +43,7 @@ Santi si spense a Vignola il 29 giugno 1964 (così, nella lapide funeraria; <str
 <h5><big><big><big><big><strong><center>IMMAGINI</center></strong></big></big></big></big></big></h5><br>
 <p><big><big><center>Santi nella prima maturità. Fonte: Pippo [G. Riva] - Nam [M. Navona],<br> <i>Le riviste del passato</i>, «Il labirinto», a. V (2008), fasc. 1, pp. 72-81: 80. </big></big></p>
 <img src="img/celebri vignolesi/Duca Borso/Santi da giovane.jpg" width="500" height="600"><br><br>
-<p><big><big><center>Aldo Santi e la seconda moglie Margherita Zagnoli (1888-1974) in una foto tratta dal volume di<br> <strong>Augusta Redorici</strong> [<strong>Roffi</strong>] (1922-2010), <i>Tavernelle. Testimonianze e ricordi</i>, Modena, Lito-Tipografia Paltrinieri, s.d. [ma: 1992], p. 92.</center></big></big></p>
+<p><big><big><center>Aldo Santi e la seconda moglie Margherita Zagnoli (1888-1974) in una foto tratta dal volume di<br> <strong>Augusta Redorici</strong> [<strong>Roffi</strong>] (1922-2010), <i>Tavernelle. Testimonianze e ricordi</i>,<br> Modena, Lito-Tipografia Paltrinieri, s.d. [ma: 1992], p. 92.</center></big></big></p>
 <img src="img/celebri vignolesi/Duca Borso/Santi.jpg" width="400" height="600"><br><br>
 <p><big><big><center>Santi nel suo studio.<br> Fonte: <strong>Augusta Redorici Roffi</strong>, <i>Le Chiese di Campiglio. Memoria</i>, Vignola, Libreria “dei Contrari”, 2000, p. 203.</big></big></p>
 <img src="img/celebri vignolesi/Duca Borso/Santi nel suo studio 1.jpg" width="700" height="500"><br><br>
