--- a/Soli2.html
+++ b/Soli2.html
@@ -45,6 +45,9 @@
 	<img src="img/celebri vignolesi/Soli Ivo/monumento.jpg" width="450" height="620"><br><br>
 <p><center><big><big>Monumento a Carlo Porta (1966), bronzo. Milano, Verziere.</big></big></center><br>
 	<img src="img/FOTO VARIE/monumento.jpg" width="430" height="850"><br><br><br>
+	<p><center><big><big>Medaglia per il centesimo anniversario della fondazione della Cassa di Risparmio di Vignola (1974). <br> Bronzo, forma circolare, diametro di 45 mm e contorno liscio. Prima immagine, <i>recto</i>: ragazza seduta di 3/4 a destra; <br> in alto a sinistra, in piccolo e con carattere tutto maiuscolo, «IVO SOLI». <br> Seconda immagine, <i>verso</i>: in tutto maiuscolo, «CENTO ANNI DELLA CASSA DI RISPARMIO DI VIGNOLA • 1974 •»; <br> tale iscrizione circonda quattro api presso un favo (si tratta di un’immagine che ricorda, un po’ vagamente, <br> lo stemma ufficiale della Cassa di Risparmio di Vignola). Fonte: google.com</big></big></center><br>
+<img src="img/celebri vignolesi/Soli Ivo/Recto.jpg" width="515" height="490"><br><br>
+	<img src="img/celebri vignolesi/Soli Ivo/Verso.jpg" width="515" height="490"><br><br><br>
 	<p><center><big><big><i>Pietà</i> (data ignota), bronzo dorato. Vignola, chiesa dei Santi Nazario e Celso.</big></big></center><br>
 	<img src="img/celebri vignolesi/Soli Ivo/pietà.jpg" width="1050" height="650"><br><br><br>
 <p><big><strong><a href="Celebri Vignolesi.html">Indice dei nomi</a></big></strong></p><br>
