--- a/Favoleggiatore.html
+++ b/Favoleggiatore.html
@@ -64,7 +64,7 @@
 
 <tr>
 <td><big><big><strong><a href="mazzofiori.html">15. Un mazzo di fiori</a></strong></td>
-<td><big><big><strong><a href="avvenimento.html">16. Un avvenimento dei primi tempi</a></strong></td></tr>
+<td><big><big><strong><a href="avvenimentoprimitempi.html">16. Un avvenimento dei primi tempi</a></strong></td></tr>
 
 <tr>
 <td><big><big><strong><a href="quaglie.html">17. Le due quaglie</a></strong></td>
