--- a/Muratori.html
+++ b/Muratori.html
@@ -110,7 +110,8 @@
 <img src="img/celebri vignolesi/Muratori Lodovico Antonio/caritàcristiana.jpg" width="480" height="640"><br><br>
 <p><center><big>Frontespizio di <i>Della forza della fantasia umana trattato di Lodovico Antonio Muratori,<br> Bibliotecario del Serenissimo Signor Duca di Modena</i>,<br> In Venezia, Presso Giambatista Pasquali, 1745.  Fonte: collezione privata.</big></center></p>
 <img src="img/celebri vignolesi/Muratori Lodovico Antonio/fantasia.jpg" width="485" height="650"><br><br><br>
-
+<p><center><big>Frontespizio di una delle cinque edizioni di <i>Della Pubblica Felicità</i> che uscirono con data 1749 <br> (a essere precisi, una di queste cinque – ma non la presente – apparve <br> senza l’indicazione dell’anno, il quale è però ricavabile dalla dedica dell’Autore): <br> <i>Della Pubblica Felicità, oggetto de’ buoni Principi, trattato di Lodovico Antonio Muratori, <br> bibliotecario del Serenissimo Signor Duca di Modena</i>, <br> In Lucca [ma: Venezia], s.n., 1749, in-8°, pp. [32,] 460. Fonte: google.com</big></center></p>
+<img src="img/celebri vignolesi/Muratori Lodovico Antonio/felicità.jpg" width="485" height="650"><br><br><br>
 
 	
 <p><strong><a href="Celebri Vignolesi.html">Indice dei nomi</a></strong></p><br>
