--- a/Selmi.html
+++ b/Selmi.html
@@ -86,6 +86,8 @@ Nelle segnalate pagine del presente numero di questa pubblicazione periodica, si
 
 <p><big><strong>CANEVAZZI, Giovanni</strong>: <strong><i>Francesco Selmi. Patriotta, Letterato, Scienziato. Con appendice di lettere inedite</i></strong>, Modena, Tipo-litografia Forghieri e Pellequi, 1903.</big></p>
 
+<p><big><strong>CERRUTI, Luigi - IELUZZI, Gianmarco - TURCO, Francesca</strong>: <strong><i>Scienza, tecnologia e comunicazione iconografica: il caso dell’Enciclopedia chimica di Francesco Selmi</i></strong>, «Le Culture della Tecnica», N.S., n. 18 (2007), pp. 5-50.</big><p>
+	
 <p><big><strong>CIARDI, Marco</strong>: <strong><i>Selmi, Francesco</i></strong>, in <i>Dizionario Biografico degli Italiani</i>, vol. XCI, Roma, Istituto della Enciclopedia italiana, 2018, pp. 826-829.<br>
 Questa voce enciclopedica è disponibile anche nel sito web della <a href="https://www.treccani.it/enciclopedia/francesco-selmi_%28Dizionario-Biografico%29/">Treccani</a>, senza paginazione.</big></p>
 
