--- a/Barozzi.html
+++ b/Barozzi.html
@@ -65,8 +65,8 @@ Questa voce enciclopedica è disponibile anche nel sito web della <a href="https
 	<img src="img/celebri vignolesi/Barozzi/portico.jpg" width="800" height="600"></p><br>
 <p><big><center>Facciata del Palazzo Farnese a Caprarola (VT); dal 1559, Barozzi lavorò lungamente a quest’edificio. Fonte: google.com</center></big><br>
 	<img src="img/celebri vignolesi/Barozzi/facciata.jpg" width="900" height="600"></p><br>
-<p><big><center>Frontespizio della prima edizione della <i>Regola delli cinque ordini d’architettura</i> (1583). Fonte: google.com</center></big></p>
-		<img src="img/celebri vignolesi/Barozzi/regola.jpg" width="500" height="650"></p><br><br><br>
+<p><big><center>Frontespizio di <i>Le due Regole della Prospettiva pratica di M. Iacomo Barozzi da Vignola.<br> Con i comentarij del R.P.M. Egnatio Danti dell’ordine de Predicatori Matematico dello Studio di Bologna.<br> All’ill. et ecell. Sig. Iacomo Buoncompagni Duca di Sora et d’Arce Signor d’Arpino Marchese di Vignola<br> Cap. Gen. degl’huomini d’arme del Re Catt. nello stato di Milano et Gouernatore Generale di Santa Chiesa</i>,<br> In Roma, Per Francesco Zannetti, 1583. Fonte: google.com</center></big></p>
+		<img src="img/celebri vignolesi/Barozzi/regola.jpg" width="460" height="630"></p><br><br><br>
 <p><strong><a href="Celebri Vignolesi.html">Indice dei nomi</a></strong></center></p>
 </section>
 <footer><i class="far fa-copyright">&nbsp;</i> Copyright 2021,2022 - CELEBRI VIGNOLESI<br>
