--- a/ottobre.html
+++ b/ottobre.html
@@ -39,8 +39,8 @@ Tra le opere che caratterizzarono il culmine della sua carriera professionale, i
 Inoltre, con ogni probabilità Barozzi collaborò alla realizzazione del Palazzo Contrari a Vignola (iniziato nel 1560), in particolar modo per quanto riguarda l’ideazione della scala elicoidale autoportante costruita al suo interno.<br>
 <i>Il Vignola</i> è passato alla storia anche come insigne trattatista grazie ai seguenti libri: <i>Regola delli cinque ordini d’architettura</i> (1562), ove viene delineato il concetto di ordine architettonico; <i>Le due regole della prospettiva pratica</i> (1583, postumo).<br>
 Barozzi morì a Roma il 7 luglio 1573 (calendario giuliano) e venne inumato nel Pantheon; ai nostri giorni non è più presente l'indicazione del punto esatto della sepoltura.</big></p>
-<p><big>Nell’immagine sottostante, frontespizio della barozziana <i>Regola delli cinque ordini d’architettura</i>. Fonte: google.com</big></p><br><br>
-<img src="img/celebri vignolesi/Barozzi/regola.jpg" width="500" height="650"></p><br>
+<p><big>Nell’immagine sottostante, frontespizio di <i>Le due Regole della Prospettiva pratica di M. Iacomo Barozzi da Vignola. Con i comentarij del R.P.M. Egnatio Danti dell’ordine de Predicatori Matematico dello Studio di Bologna. All’ill. et ecell. Sig. Iacomo Buoncompagni Duca di Sora et d’Arce Signor d’Arpino Marchese di Vignola Cap. Gen. degl’huomini d’arme del Re Catt. nello stato di Milano et Gouernatore Generale di Santa Chiesa</i>, In Roma, Per Francesco Zannetti, 1583. Fonte: google.com</big></p><br><br>
+<img src="img/celebri vignolesi/Barozzi/regola.jpg" width="460" height="630"></p><br>
 <p><strong><big><big><center>Vuoi saperne di più su Giacomo Barozzi?<br>Allora, visita il suo <a href="Barozzi.html">profilo personale</a> nella sezione <a href="Celebri Vignolesi.html">Celebri Vignolesi</a>!</big></big></center></strong></p><br><br><br>
 
 <p><big><strong>20 ottobre 1822</strong>: morì a Modena <strong>GIUSEPPE MARIA SOLI</strong>, architetto, ingegnere, pittore e insegnante. Venne sepolto nel cimitero di Vignola (quello che precedeva il camposanto ora in uso).<br><br>
