--- a/Novità.html
+++ b/Novità.html
@@ -40,7 +40,21 @@
  
 <strong>GIUSEPPE MARIA SOLI</strong>, architetto, pittore, insegnante e direttore di Accademia delle Belle Arti: <strong>200 ANNI DALLA MORTE</strong>.</big></p>
 <p><big>Nell’immagine, vista della rocca di Vignola da Via Zenzano in una fotografia scattata il 4 aprile 2022.</big></p><br>
-<img src="img/FOTO VARIE/rocca3.jpg" width="1000" height="810"><br><br><br><br><br><br>
+<img src="img/FOTO VARIE/viatufo.jpg" width="600" height="800"><br><br><br><br><br><br>
+
+<p><big><big><span style="text-decoration: underline;">4 ottobre 2022</span></big></big></p><br><br>
+<p><big>Qui di seguito, presentiamo l’<i>incipit</i> di <i><strong>LE DUE QUAGLIE</strong></i>, la diciassettesima favola di <i><strong>IL FAVOLEGGIATORE</strong></i>, raccolta pubblicata nel 1857 da <strong>Francesco Selmi</strong> (1817-1881):<br>  
+«Un campagnolo colse alle reti una quaglia, e poiché ebbela presa in mano l’accecò tosto, la introdusse in una gabbia, e le fornì grano in abbondanza acciò non le mancasse conforto di cibo a sazietà.<br>
+L’uccello era giovinetto, onde in breve dimenticò la grave ed irreparabile sciagura della vista rapitagli, e della perduta libertà; e, credendo che la copia dell’alimento fosse il colmo di ogni bene, vi si accontentò, e passava i giorni a sfringuellare gaiamente ed a ripetere il suo canto nativo
+».<br>
+Per leggere integralmente questa favola, <a href="https://sarascaglioni.github.io/Celebri-Vignolesi/Favoleggiatore.html">clicca qui</a>.</big></p><br><br><br> 
+
+<p><big><big><span style="text-decoration: underline;">19 settembre 2022</span></big></big></p><br><br>
+<p><big>Qui di seguito, presentiamo l’<i>incipit</i> di <i><strong>UN AVVENIMENTO DEI PRIMI TEMPI</strong></i>, la sedicesima favola di <i><strong>IL FAVOLEGGIATORE</strong></i>, raccolta pubblicata nel 1857 da <strong>Francesco Selmi</strong> (1817-1881):<br>  
+«Dopo che la schiatta umana cominciò a popolare la terra, gli animali che dapprima ne tenevano il dominio assoluto, o ne furono sgomenti o ne pigliarono grand’ira, e, ragunati in concistoro, proposero di avvisare ai mezzi con cui provvedere contro il nuovo nemico surto improvvisamente in loro danno.<br>
+Le belve di quella spaventevole adunanza sbuffavano, ululavano, ringhiavano, scricchiolavano dei denti, con occhi sanguigni scintillanti di rabbia, gole aperte, sanne pronte, unghioni sfoderati e voci fierissime di guerra a morte, da combattere l’uomo sino all’ultimo sterminio.<br>
+L’assemblea suonava adunque vendetta feroce, e di subito prorompere al combattimento ed al macello; e posso dirvi, che chiunque si fosse trovato ivi presente, per quanto forte e audace, non sarebbesi difeso da un senso irrefrenabile di terrore».<br>
+Per leggere integralmente questa favola, <a href="https://sarascaglioni.github.io/Celebri-Vignolesi/Favoleggiatore.html">clicca qui</a>.</big></p><br><br><br> 
 	
 <p><big><big><span style="text-decoration: underline;">5 settembre 2022</span></big></big></p><br><br>
 <p><big>Qui di seguito, presentiamo l’<i>incipit</i> di <i><strong>UN MAZZO DI FIORI</strong></i>, la quindicesima favola di <i><strong>IL FAVOLEGGIATORE</strong></i>, raccolta pubblicata nel 1857 da <strong>Francesco Selmi</strong> (1817-1881):<br>  
