--- a/Favoleggiatore.html
+++ b/Favoleggiatore.html
@@ -67,7 +67,7 @@
 <td><big><big><strong><a href="avvenimentoprimitempi.html">16. Un avvenimento dei primi tempi</a></strong></td></tr>
 
 <tr>
-<td><big><big><strong><a href="quaglie.html">17. Le due quaglie</a></strong></td>
+<td><big><big><strong><a href="duequaglie.html">17. Le due quaglie</a></strong></td>
 <td><big><big><strong><a href="polvere.html">18. Il granello di polvere</a></strong></td></tr>
 
 <tr>
