--- a/Selmi.html
+++ b/Selmi.html
@@ -202,6 +202,8 @@ Ad avviso dell’insigne Vignolese, infine, Dante condensava in sé le migliori 
 	<img src="img/celebri vignolesi/Selmi/ritratto.jpg" width="500" height="650"><br><br>
 	<p><center><big>Selmi all’apparente età di circa 47/48 anni. Fonte: Fondo archivistico Selmi.</big></center></p>
 	<img src="img/celebri vignolesi/Selmi/Selmi quarantacinquenne.jpg" width="500" height="700"><br><br>
+<p><center><big>Selmi all'apparente età di quasi 60 anni. Fonte: Raccolta famiglia Plessi.</big></center></p>
+	<img src="img/celebri vignolesi/Selmi/selmi60.jpg" width="550" height="700"><br><br>
 	<p><center><big>Ritratto di Selmi in età senile, incisione eseguita a partire da un disegno dell’artista laziale Dante Paolocci (1849-1926);<br> accompagna <i>Francesco Selmi</i>, necrologio anonimo uscito in «L’Illustrazione Italiana»,<br> 28 agosto 1881, t. II dell’annata, pp. 139-140, con l’immagine a p. 140. Fonte: google.com</big></center></p>
 	<center><img src="img/celebri vignolesi/Selmi/illustrazione.jpg" width="450" height="650"></center><br><br>
 <p><center><big><i>Incipit</i> di <i>Canto a Vignola</i>; questo poemetto uscì, nell’aprile del 1840,<br> all’interno del «Giornale letterario scientifico modenese», t. II, n. 7, pp. 77-80.<br> Fonte: google.com</big></center></p>
