--- a/ottobre.html
+++ b/ottobre.html
@@ -43,6 +43,20 @@ Barozzi morì a Roma il 7 luglio 1573 (calendario giuliano) e venne inumato nel 
 <img src="img/celebri vignolesi/Barozzi/regola.jpg" width="460" height="630"></p><br>
 <p><strong><big><big><center>Vuoi saperne di più su Giacomo Barozzi?<br>Allora, visita il suo <a href="Barozzi.html">profilo personale</a> nella sezione <a href="Celebri Vignolesi.html">Celebri Vignolesi</a>!</big></big></center></strong></p><br><br><br>
 
+<p><big><strong>6 ottobre 1907</strong>: morì a Zenzano di Savignano <strong>ALESSANDRO PLESSI</strong>, amministratore locale e studioso. Fu tumulato nel camposanto di Vignola.<br><br>  
+
+ 
+
+Di famiglia agiata, Alessandro Plessi nacque a Modena il 30 marzo 1824. Egli fu sempre legatissimo a Vignola e lì visse buona parte dell’esistenza.<br>  
+
+Avvocato, fu sindaco della cittadina modenese a più riprese (1860-1865, 1868-1891, 1902-1905), per un totale di oltre trent’anni. Sovente in collaborazione con <strong>Giovanni Rodolfi</strong> (1828-1896), <strong>Francesco Selmi</strong> (1817-1881), <strong>Luca Antonio Tosi</strong> (1811-1876) e diversi altri benemeriti e determinati concittadini, Plessi diede impulso alla nascita di enti, associazioni, spazi e infrastrutture per il bene dell’intera comunità, e contribuì a organizzare le celebrazioni per il secondo centenario della nascita di <strong>Lodovico Antonio Muratori</strong> (1672-1750).    
+
+Pubblicò il libro <i>Istorie vignolesi narrate a’ suoi figli da Alessandro Plessi</i> (Vignola, Tipografia di Antonio Monti, s.d. [ma: 1885]) e l’opuscolo <i>Per la festa centenaria di Lodovico Antonio Muratori, lettera al ch. prof. cav. Francesco Selmi intorno al dott. Giuseppe Antonio Plessi vignolese</i> (Modena, Tipografia di Carlo Vincenzi, 1872). Inoltre, curò la prima edizione a stampa di <i>De Vineolae moderniori statu chronica enarratio</i> (Bononiae, Apud Nicolaum Zanichelli […], 1872), manoscritto di <strong>Domenico Belloi</strong> (1660-1712).<br><br>
+Nell’immagine sottostante, cappella funebre di Plessi, cimitero di Vignola. Il busto fu eseguito da Giuseppe Graziosi (1879-1942), mentre l’iscrizione venne dettata da Tommaso Casini (1859-1917).</big></p><br><br>
+<img src="img/celebri vignolesi/Plessi Alessandro/Tomba intera.jpg" width="500" height="600"><br><br>
+<img src="img/celebri vignolesi/Plessi Alessandro/busto.jpg" width="600" height="450"><br><br><br>
+<p><strong><big><big><center>Vuoi saperne di più su Alessandro Plessi?<br>Allora, visita il suo <a href="Plessi1.html">profilo personale</a> nella sezione <a href="Celebri Vignolesi.html">Celebri Vignolesi</a>!</big></big></center></strong></p><br><br><br>
+
 <p><big><strong>20 ottobre 1822</strong>: morì a Modena <strong>GIUSEPPE MARIA SOLI</strong>, architetto, ingegnere, pittore e insegnante. Venne sepolto nel cimitero di Vignola (quello che precedeva il camposanto ora in uso).<br><br>
 Nato a Vignola il 23 giugno 1747 in una famiglia di agricoltori, Giuseppe Maria Soli si guadagnò una grande fama specialmente in campo architettonico, ma fu anche pittore distinto e maestro di intere generazioni di artisti a Modena. Attivo in alcune città italiane e in diversi centri minori, nel paese natale egli concepì l’elegante Casino – o Villa – Bellucci (poi, Tosi Bellucci), ora Residenza Municipale; anche se il progetto data 1789, i lavori vennero iniziati molto probabilmente solo nel 1815 e furono conclusi tra il 1823 e il 1824. Ai decori parietali all’interno dell’edificio provvide in massima parte il conterraneo <strong>Pietro Minghelli</strong> (1780-1822), già suo allievo all’Accademia di Belle Arti di Modena, istituto presso il quale Soli fu a lungo non solo docente di Architettura Civile, Disegno e Pittura, ma anche direttore. Dal 1867 è conservato in questa prestigiosa dimora l’<i>Autoritratto</i> che l’artista dipinse non prima del 1805.<br> 
 Nel 1821 stese un progetto per ingrandire la chiesa parrocchiale di Vignola.<br><br>
