--- a/Plessi1.html
+++ b/Plessi1.html
@@ -55,11 +55,11 @@ Vignola gli ha intitolato una strada.</big></p><br><br><br>
 <h5><big><big><big><big><strong><center>IMMAGINI</center></strong></big></big></big></big></big></h5><br><br>
 
 <p><center><big><big>Plessi nella prima maturità. Fonte: Raccolta famiglia Plessi.</big></big></center></p><br>
-<img src="img/celebri vignolesi/Plessi Alessandro/plessi2.jpg" width="390" height="630"><br><br><br>
+<img src="img/celebri vignolesi/Plessi Alessandro/Plessi2.jpg" width="390" height="630"><br><br><br>
 <p><center><big><big>Plessi nel 1864. Fonte: Raccolta famiglia Plessi.</big></big></center></p><br>
 <img src="img/celebri vignolesi/Plessi Alessandro/plessi.jpg" width="390" height="650"><br><br><br>
 <p><center><big><big>Plessi nella tarda maturità. Fonte: Raccolta famiglia Plessi.</big></big></center></p><br>
-<img src="img/celebri vignolesi/Plessi Alessandro/plessi3.jpg" width="550" height="650"><br><br><br>
+<img src="img/celebri vignolesi/Plessi Alessandro/Plessi3.jpg" width="550" height="650"><br><br><br>
 <p><center><big><big>Alessandro Plessi e il figlio Renato nella Biblioteca Comunale di Vignola,<br> allora situata in un’ampia sala del primo piano della rocca (foto risalente al 1900 ca.).<br> Fonte: Raccolta famiglia Plessi.</big></big></center><br>
 <img src="img/celebri vignolesi/Plessi Alessandro/biblioteca.jpg" width="750" height="550"><br><br><br>
 <p><center><big><big>Decreto di nomina di Plessi a sindaco di Vignola, datato 10 marzo 1860 e firmato da Luigi Carlo Farini,<br> governatore delle Regie Provincie dell'Emilia. Fonte: Raccolta famiglia Plessi.</big></big></center><br>
