--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 <h1>CELEBRI VIGNOLESI</h1><br><br>
 <big><big><center><strong><big><a href="homepage.html">ENTRA</a></big></strong></center></big></big><br><br>
 <center><img src="img/img2.jpg" width="600" height="400"></center>
-<p><center><big><big>Fotografia risalente al 1900 ca.: Alessandro Plessi e il figlio Renato nella Biblioteca Comunale di Vignola,<br>
-allora situata in un’ampia sala del primo piano della rocca. Fonte: Raccolta famiglia Plessi.</big></big></center></p><br>
+<p><center><big><big>Fotografia risalente al 1900 ca.: Alessandro Plessi (1824-1907) e il figlio Renato (1878-1954) nella Biblioteca Comunale di Vignola,<br>
+allora situata in un vasto ambiente del primo piano della rocca, la Sala dei Tronchi d’Albero. Fonte: Raccolta famiglia Plessi. </big></big></center></p><br>
 </header>
 </body>
 </html>
