--- a/Soli2.html
+++ b/Soli2.html
@@ -48,8 +48,14 @@
 	<p><center><big><big>Medaglia per il centesimo anniversario della fondazione della Cassa di Risparmio di Vignola (1974). <br> Bronzo, forma circolare, diametro di 45 mm e contorno liscio. Prima immagine, <i>recto</i>: ragazza seduta di 3/4 a destra; <br> in alto a sinistra, in piccolo e con carattere tutto maiuscolo, «IVO SOLI». <br> Seconda immagine, <i>verso</i>: in tutto maiuscolo, «CENTO ANNI DELLA CASSA DI RISPARMIO DI VIGNOLA • 1974 •»; <br> tale iscrizione circonda quattro api presso un favo (si tratta di un’immagine che ricorda, un po’ vagamente, <br> lo stemma ufficiale della Cassa di Risparmio di Vignola). Fonte: google.com</big></big></center><br>
 <img src="img/celebri vignolesi/Soli Ivo/Recto.jpg" width="515" height="510"><br><br>
 	<img src="img/celebri vignolesi/Soli Ivo/Verso.jpg" width="515" height="510"><br><br><br>
-	<p><center><big><big><i>Pietà</i> (data ignota), bronzo dorato. Vignola, chiesa dei Santi Nazario e Celso.</big></big></center><br>
+	<p><center><big><big><i>Pietà</i>, bronzo dorato, data sconosciuta. Vignola, chiesa dei Santi Nazario e Celso.</big></big></center><br>
 	<img src="img/celebri vignolesi/Soli Ivo/pietà.jpg" width="1050" height="650"><br><br><br>
+<p><center><big><big><i>Ritratto di donna anziana</i>, olio su tela, data sconosciuta; collezione privata. Fonte: google.com</big></big></center><br>
+<img src="img/celebri vignolesi/Soli Ivo/quadro1.jpg" width="470" height="550"><br><br><br>
+<center><big><big><i>Ritratto di uomo</i>, olio su tela, data sconosciuta; collezione privata. Fonte: google.com</big></big></center><br>
+<img src="img/celebri vignolesi/Soli Ivo/quadro2.jpg" width="670" height="700"><br><br><br>
+<center><big><big><i>Il ponte di Vignola nel maggio 1945​,</i> olio su tela, forse risalente a quello stesso 1945; collezione privata.<br> Fonte: sopraccoperta sulla prima di copertina di <strong>Attilio Neri</strong> ​(1921-2009), <i>Il ponte di Vignola in pace e in guerra<br> con 155 illustrazioni, 2 tavole fuori testo e 6 immagini della guerra a Modena</i>, Vignola, Fabbri Arti Grafiche Editrice, 1984.</big></big></center><br>
+<img src="img/celebri vignolesi/Soli Ivo/quadro3.jpg" width="700" height="530"><br><br><br>
 <p><big><strong><a href="Celebri Vignolesi.html">Indice dei nomi</a></big></strong></p><br>
 </section>
 <footer><i class="far fa-copyright">&nbsp;</i> Copyright 2021, 2022 - CELEBRI VIGNOLESI<br>
