--- a/Soli2.html
+++ b/Soli2.html
@@ -40,22 +40,24 @@
 <p><center><big><big><i>Nudo femminile seduto</i> (1937-1940), bronzo. Vignola, Piazza Giardino d’Europa.</big></big></center><br>
 	<img src="img/celebri vignolesi/Soli Ivo/donnanera.jpg" width="500" height="600"><br><br>
 <p><center><big><big><i>Fanciulla accovacciata</i> (1945-1948), bronzo. Vignola, Via Selmi,<br> davanti alla porta di ingresso della casa natale di <strong>Lodovico Antonio Muratori</strong> (1672-1750).</big></big></center><br>
-	<img src="img/celebri vignolesi/Soli Ivo/statua.jpg" width="500" height="650"><br><br>
-<p><center><big><big>Soli intento a modellare, nel 1965, il monumento a Carlo Porta. Fonte: <i>Ivo Soli</i>, cit.</big></big></center><br>
-	<img src="img/celebri vignolesi/Soli Ivo/monumento.jpg" width="450" height="620"><br><br>
-<p><center><big><big>Monumento a Carlo Porta (1966), bronzo. Milano, Verziere.</big></big></center><br>
-	<img src="img/FOTO VARIE/monumento.jpg" width="430" height="850"><br><br><br>
-	<p><center><big><big>Medaglia per il centesimo anniversario della fondazione della Cassa di Risparmio di Vignola (1974). <br> Bronzo, forma circolare, diametro di 45 mm e contorno liscio. Prima immagine, <i>recto</i>: ragazza seduta di 3/4 a destra; <br> in alto a sinistra, in piccolo e con carattere tutto maiuscolo, «IVO SOLI». <br> Seconda immagine, <i>verso</i>: in tutto maiuscolo, «CENTO ANNI DELLA CASSA DI RISPARMIO DI VIGNOLA • 1974 •»; <br> tale iscrizione circonda quattro api presso un favo (si tratta di un’immagine che ricorda, un po’ vagamente, <br> lo stemma ufficiale della Cassa di Risparmio di Vignola). Fonte: google.com</big></big></center><br>
+	<img src="img/celebri vignolesi/Soli Ivo/statua.jpg" width="450" height="610"><br><br>
+<p><center><big><big>Soli intento a modellare il monumento a Carlo Porta, inaugurato nel 1966 al Verziere di Milano. Fonte: <i>Ivo Soli</i>, cit.</big></big></center><br>
+	<img src="img/celebri vignolesi/Soli Ivo/monumento.jpg" width="430" height="600"><br><br>
+<p><center><big><big>Monumento a Carlo Porta, bronzo.</big></big></center><br>
+	<img src="img/FOTO VARIE/monumento.jpg" width="380" height="770"><br><br><br>
+
+<p><center><big><big>Medaglia per il centesimo anniversario della fondazione della Cassa di Risparmio di Vignola (1974). <br> Bronzo, forma circolare, diametro di 45 mm e contorno liscio. Prima immagine, <i>recto</i>: ragazza seduta di 3/4 a destra; <br> in alto a sinistra, in piccolo e con carattere tutto maiuscolo, «IVO SOLI». <br> Seconda immagine, <i>verso</i>: in tutto maiuscolo, «CENTO ANNI DELLA CASSA DI RISPARMIO DI VIGNOLA • 1974 •»; <br> tale iscrizione circonda quattro api presso un favo (si tratta di un’immagine che ricorda, un po’ vagamente, <br> lo stemma ufficiale della Cassa di Risparmio di Vignola). Fonte: google.com</big></big></center><br>
 <img src="img/celebri vignolesi/Soli Ivo/Recto.jpg" width="515" height="510"><br><br>
 	<img src="img/celebri vignolesi/Soli Ivo/Verso.jpg" width="515" height="510"><br><br><br>
-	<p><center><big><big><i>Pietà</i>, bronzo dorato, data sconosciuta. Vignola, chiesa dei Santi Nazario e Celso.</big></big></center><br>
-	<img src="img/celebri vignolesi/Soli Ivo/pietà.jpg" width="1050" height="650"><br><br><br>
+
+<p><center><big><big><i>Pietà</i>, bronzo dorato, data sconosciuta. Vignola, chiesa dei Santi Nazario e Celso.</big></big></center><br>
+	<img src="img/celebri vignolesi/Soli Ivo/pietà.jpg" width="1000" height="600"><br><br><br>
 <p><center><big><big><i>Ritratto di donna anziana</i>, olio su tela, data sconosciuta; collezione privata. Fonte: google.com</big></big></center><br>
-<img src="img/celebri vignolesi/Soli Ivo/quadro1.jpg" width="470" height="550"><br><br><br>
+<img src="img/celebri vignolesi/Soli Ivo/quadro1.jpg" width="490" height="580"><br><br><br>
 <center><big><big><i>Ritratto di uomo</i>, olio su tela, data sconosciuta; collezione privata. Fonte: google.com</big></big></center><br>
-<img src="img/celebri vignolesi/Soli Ivo/quadro2.jpg" width="670" height="700"><br><br><br>
-<center><big><big><i>Il ponte di Vignola nel maggio 1945​,</i> olio su tela, forse risalente a quello stesso 1945; collezione privata.<br> Fonte: sopraccoperta sulla prima di copertina di <strong>Attilio Neri</strong> ​(1921-2009), <i>Il ponte di Vignola in pace e in guerra<br> con 155 illustrazioni, 2 tavole fuori testo e 6 immagini della guerra a Modena</i>, Vignola, Fabbri Arti Grafiche Editrice, 1984.</big></big></center><br>
-<img src="img/celebri vignolesi/Soli Ivo/quadro3.jpg" width="700" height="530"><br><br><br>
+<img src="img/celebri vignolesi/Soli Ivo/quadro2.jpg" width="600" height="660"><br><br><br>
+<center><big><big><i>Il ponte di Vignola nel maggio 1945,</i> olio su tela, forse risalente a quello stesso 1945; collezione privata.<br> Fonte: sopraccoperta sulla prima di copertina di <strong>Attilio Neri</strong> ​(1921-2009), <i>Il ponte di Vignola in pace e in guerra<br> con 155 illustrazioni, 2 tavole fuori testo e 6 immagini della guerra a Modena</i>, Vignola, Fabbri Arti Grafiche Editrice, 1984.</big></big></center><br>
+<img src="img/celebri vignolesi/Soli Ivo/quadro3.jpg" width="820" height="580"><br><br><br>
 <p><big><strong><a href="Celebri Vignolesi.html">Indice dei nomi</a></big></strong></p><br>
 </section>
 <footer><i class="far fa-copyright">&nbsp;</i> Copyright 2021, 2022 - CELEBRI VIGNOLESI<br>
