--- a/Favoleggiatore.html
+++ b/Favoleggiatore.html
@@ -68,7 +68,7 @@
 
 <tr>
 <td><big><big><strong><a href="duequaglie.html">17. Le due quaglie</a></strong></td>
-<td><big><big><strong><a href="polvere.html">18. Il granello di polvere</a></strong></td></tr>
+<td><big><big><strong><a href="granellopolvere.html">18. Il granello di polvere</a></strong></td></tr>
 
 <tr>
 <td><big><big><strong><a href="passero.html">19. Il passero solingo</a></strong></td>
